--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="main-nav transparent">
             <div class="container">
                 <a href="#" class="logo-link">
-                    <img src="/images/logo.jpg" alt="Logo" class="header-logo">
+                    <img src="images/logo.jpg" alt="Logo" class="header-logo">
                 </a>
                 <button class="mobile-menu-btn">
                     <i class="fas fa-bars"></i>
