memperbaiki path gambar pada index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="main-nav transparent">
             <div class="container">
                 <a href="#" class="logo-link">
-                    <img src="/images/logo.jpg" alt="Logo" class="header-logo">
+                    <img src="images/logo.jpg" alt="Logo" class="header-logo">
                 </a>
                 <button class="mobile-menu-btn">
                     <i class="fas fa-bars"></i>
@@ -38,7 +38,7 @@
         </nav>
     </header>
 
-    <section class="hero" style="background-image: url('/images/banner.jpg');">
+    <section class="hero" style="background-image: url('images/banner.jpg');">
         <div class="hero-overlay"></div>
         <div class="hero-content">
             <h1 data-aos="fade-down">Service Center Teka 0812-6008-5200</h1>
@@ -66,7 +66,7 @@
     <section class="about-us">
         <div class="container">
             <div class="about-image" data-aos="fade-right">
-                <img src="/images/banner2.jpg" alt="Teka Gas Stove">
+                <img src="images/banner2.jpg" alt="Teka Gas Stove">
             </div>
             <div class="about-text" data-aos="fade-left" data-aos-delay="100">
                 <p class="section-subtitle">About Service Teka</p>
@@ -107,21 +107,21 @@
             <h2 data-aos="fade-up" data-aos-delay="100">We Provide Superior Teka Services</h2>
             <div class="service-grid">
                 <div class="service-card" data-aos="fade-up" data-aos-delay="200">
-                    <img src="/images/service1.jpg" alt="Service Kompor Teka">
+                    <img src="images/service1.jpg" alt="Service Kompor Teka">
                     <div class="card-content">
                         <h3>Service Kompor Teka</h3>
                         <p>Service kompor Teka menyediakan perawatan dan perbaikan profesional untuk memastikan kinerja optimal dan keamanan, menjaga rumah Anda tetap aman dan nyaman.</p>
                     </div>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="300">
-                    <img src="/images/service2.jpg" alt="Service Cooker Hood">
+                    <img src="images/service2.jpg" alt="Service Cooker Hood">
                     <div class="card-content">
                         <h3>Service Cooker Hood</h3>
                         <p>Cooker hood Teka adalah layanan perawatan perangkat dapur profesional yang membersihkan dan merawat exhaust fan serta filter Anda dengan cermat dan efisien.</p>
                     </div>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="400">
-                    <img src="/images/service3.jpg" alt="Service Oven Teka">
+                    <img src="images/service3.jpg" alt="Service Oven Teka">
                     <div class="card-content">
                         <h3>Service Oven Teka</h3>
                         <p>Service Oven Teka Ahli perbaikan dan pemeliharaan oven berkualitas. Layanan cepat, efisien, dan andal untuk memastikan oven Anda berfungsi dengan baik.</p>
@@ -147,7 +147,7 @@
                 <a href="https://wa.me/6281260085200" class="btn-primary">HUBUNGI KAMI</a>
             </div>
             <div class="pro-service-image" data-aos="zoom-in-left" data-aos-delay="100">
-                <img src="/images/banner3.jpg" alt="Home Appliances">
+                <img src="images/banner3.jpg" alt="Home Appliances">
             </div>
         </div>
     </section>
@@ -173,17 +173,17 @@
             <p class="testimonial-intro" data-aos="fade-up" data-aos-delay="100">Service Teka adalah tempat terpercaya untuk memperbaiki dan merawat perangkat elektronik Anda.</p>
             <div class="testimonial-grid">
                 <div class="testimonial-card" data-aos="flip-left" data-aos-delay="200">
-                    <img src="/images/testi1.jpg" alt="Ny Mieke">
+                    <img src="images/testi1.jpg" alt="Ny Mieke">
                     <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                     <h3>Ny Mieke</h3><p class="role">Ibu Rumah Tangga</p><p class="quote">"Service Center Teka, sangat profesional dan cepat! Sungguh menyenangkan bekerja dengan mereka. Terima kasih!"</p>
                 </div>
                 <div class="testimonial-card" data-aos="flip-left" data-aos-delay="300">
-                    <img src="/images/testi2.jpg" alt="Joko Susilo">
+                    <img src="images/testi2.jpg" alt="Joko Susilo">
                     <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                     <h3>Joko Susilo</h3><p class="role">Pengusaha</p><p class="quote">"Layanan Pusat Kompor Teka sangat memuaskan. Stafnya profesional, cepat, dan ramah. Terima kasih!"</p>
                 </div>
                 <div class="testimonial-card" data-aos="flip-left" data-aos-delay="400">
-                    <img src="/images/testi3.jpg" alt="Ny.Maria">
+                    <img src="images/testi3.jpg" alt="Ny.Maria">
                     <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
                     <h3>Ny.Maria</h3><p class="role">Wiraswasta</p><p class="quote">"Service kompor Teka sangat memuaskan! Teknisi mereka datang tepat waktu, cepat, dan profesional. Kompor saya sekarang berfungsi dengan baik seperti baru."</p>
                 </div>
