perbaikan teks deskripsi pada bagian layanan di index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="about-text" data-aos="fade-left" data-aos-delay="100">
                 <p class="section-subtitle">About Service Teka</p>
                 <h2>Layanan Service Center Teka</h2>
-                <p>Pusat layanan teknologi adalah tempat yang sangat penting untuk memperbaiki dan merawat perangkat elektronik Anda. Salah satu pilihan terbaik yang dapat Anda pertimbangkan adalah Teka Service Center. Dalam artikel ini, kami akan membahas mengapa Service Center Teka adalah pilihan terbaik untuk perbaikan elektronik Anda, dan bagaimana mereka memberikan layanan yang profesional.</p>
+                <p>Pusat layanan Teka adalah tempat yang sangat penting untuk memperbaiki dan merawat perangkat elektronik Anda. Salah satu pilihan terbaik yang dapat Anda pertimbangkan adalah Teka Service Center. Dalam artikel ini, kami akan membahas mengapa Service Center Teka adalah pilihan terbaik untuk perbaikan elektronik Anda, dan bagaimana mereka memberikan layanan yang profesional.</p>
                 <p>Teka Service Center adalah pilihan terbaik untuk perbaikan perangkat elektronik Anda dan juga mitra terbaik untuk memastikan produk-produk Teka Anda tetap berfungsi dengan baik dan memiliki umur panjang...</p>
                 <div class="certified">
                     <i class="fas fa-award"></i>
